--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@graphql-mesh/utils": "^0.43.22",
     "@noble/ed25519": "^1.7.1",
     "@railgun-community/engine": "4.3.5",
-    "@railgun-community/shared-models": "4.2.2",
+    "@railgun-community/shared-models": "git://github.com/venture23-zkp/shared-models.git#89b4695d58249e735751b2a1d18add012706411f",
     "@whatwg-node/fetch": "^0.8.4",
     "axios": "0.27.2",
     "brotli": "^1.3.3",
