--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@graphql-mesh/utils": "^0.43.22",
     "@noble/ed25519": "^1.7.1",
     "@railgun-community/engine": "4.3.5",
-    "@railgun-community/shared-models": "git://github.com/venture23-zkp/shared-models.git#7ccbdb5b291e233923f97add438f856b2e18c660",
+    "@railgun-community/shared-models": "venture23-zkp/shared-models.git#7ccbdb5b291e233923f97add438f856b2e18c660",
     "@whatwg-node/fetch": "^0.8.4",
     "axios": "0.27.2",
     "brotli": "^1.3.3",
